--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Githubiverse: {{ site.githubiverse.title }} by {{ site.githubiverse.author }}</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     
@@ -376,8 +377,8 @@
               processDirectories('{{ site.githubiverse.img_dir }}', showImages);
               processDirectories('{{ site.githubiverse.stl_dir }}', showSTLs);
 
-              $('#updated').append("&nbsp;"+humaneDate(githubRepo.updated_at));
-              $('#updated').attr('title', (new Date(githubRepo.updated_at)).toLocaleString());
+              $('#updated').append("&nbsp;"+humaneDate(githubRepo.pushed_at));
+              $('#updated').attr('title', (new Date(githubRepo.pushed_at)).toLocaleString());
               $('#created').append("&nbsp;"+humaneDate(githubRepo.created_at));
               $('#created').attr('title', (new Date(githubRepo.created_at)).toLocaleString());
 
